# NewspaperGenerator

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
data/structured/: 12411-0008_en.xlsx  COV_VAC_UPTAKE_2021_2023.csv  WHO-COVID-19-global-table-data.csv
src/: main.py
src/app/: app.py  frontendHelpers.py
src/generator/: llmModels.py  llmQA.py  parseOutput.py
src/pipeline/: pipelineHelper.py  rag_llm_pipeline.py
src/retriever/: dataLoader.py  hashingService.py  vectorStore.py
tests/: test_vectorStore.py
