[project]
name = "newspapergenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core
    "langchain>=0.3.27", # core LangChain
    "langchain-community>=0.3.30", # integrations (FAISS, etc.)
    "langchain-openai>=0.2.0", # OpenAI integration
    "langchain-huggingface>=0.1.0", # HuggingFace embeddings
    # Vector DB
    "faiss-cpu>=1.12.0",
    # Data + parsing
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    # Security / utils
    "pycryptodome>=3.23.0",
    # Embeddings / models
    "sentence-transformers>=5.1.1",
    # OpenAI + tokenization
    "openai>=1.0.0", # >=1.0 has the new API (don’t use 2.0, it’s experimental)
    "tiktoken>=0.11.0",
    # Validation
    "pydantic>=2.11.9",
    # LangSmith optional
    "langsmith>=0.4.31",
    "langchain-ollama>=0.3.10",
]
